[project]
name = "nonebot-plugin-maimai-raking"
version = "0.1.0"
description = "一个基于 NoneBot2 的舞萌 DX 分群排行榜插件"
authors = [
    {name = "yukko"},
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "httpx>=0.23.0",
    "pillow>=9.0.0",
    "pydantic>=1.10.0",
    "apscheduler>=3.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.license]
text = "MIT"

[tool.nonebot]
plugins = ["nonebot_plugin_maimai_raking"]

